# syphon

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
charts/syphon/: values.yaml
charts/syphon/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  service.yaml
charts/syphon/templates/tests/: test-connection.yaml
configs/: config.toml
proto/: carbon.proto
proto/prometheus/: remote.proto
src/: main.rs  parser.rs
src/config/: mod.rs  schema.rs
src/config/schema/: receiver.rs  uploader.rs
src/parser/: graphite.rs  metric.rs  mod.rs  prometheus.rs
src/parser/prometheus/: buffer.rs  protobuf.rs
src/receiver/: base.rs  file.rs  mod.rs  prometheus.rs  spawn.rs  tcp.rs  udp.rs
src/uploader/: file.rs  graphite.rs  grpc.rs  mod.rs  spawn.rs  tcp.rs  udp.rs
