[package]
name = "syphon"
description = "Versatile metrics processor, proxy and forwarder"
version = "1.0.0"
authors = ["butlerx <butlerx@notthe.cloud>"]
edition = "2018"

[dependencies]
async-trait = "0.1.27"
clap = "2.33.0"
futures = "0.3.4"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["full"] }
toml = "0.5.6"
