[package]
name = "syphon"
description = "Versatile metrics processor, proxy and forwarder"
version = "1.0.0"
authors = ["butlerx <butlerx@notthe.cloud>"]
edition = "2018"

[dependencies]
async-trait = "0.1.27"
clap = "2.33.0"
hyper = "0.13.4"
named_tuple = "0.1.3"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
snap = "1"
tokio = { version = "0.2", features = ["full"] }
toml = "0.5.6"
