[package]
name = "syphon"
description = """
Versatile metrics processor, proxy and forwarder"
syphon is designed to accept and route metrics traffic.
Metrics can be received from socket, snooped from live traffic or read from file or grpc.
Metrics can be exportered via file, grpc or udp/tcp
"""
version = "0.1.0"
repository = "https://github.com/butlerx/syphon"
license = "Apache-2.0"
readme = "README.md"
authors = ["butlerx <butlerx@notthe.cloud>"]
edition = "2018"
build = "build.rs"
include = ["src/**/*", "Cargo.toml", "configs/**/*.yaml", "proto/**/*.proto"]

[dependencies]
clap = "2.33.0"
futures = "0.3.4"
hyper = "0.13.4"
json_env_logger = { version = "0.1", features = ["iso-timestamps"] }
kv-log-macro = "1.0"
named_tuple = "0.1.3"
itertools = "0.10.0"
prost = "0.7"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
snafu = "0.6.6"
snap = "1"
stderrlog = "0.4.3"
tokio = { version = "0.2", features = ["full"] }
toml = "0.5.6"
tonic = "0.4"

[build-dependencies]
tonic-build = "0.4"
